--- a/standard.html
+++ b/standard.html
@@ -19,8 +19,8 @@
             <div class="dropdown">
               <button onclick="myFunction()" class="dropbtn">Kommende Sendungen</button>
               <div id="myDropdown" class="dropdown-content">
-                <a href="https://happybirthdayshowhelsinki.github.io/25112020"><span class="badge badge-success">!</span> 25.11.2020 <img src="https://happybirthdayshowhelsinki.github.io/favicon/favicon-32x32.png" alt="!"></a>
-                <a href="https://happybirthdayshowhelsinki.github.io/23122020">23.12.2020</a>
+                <a href="https://happybirthdayshowhelsinki.github.io/25112020"><span class="badge badge-success">!</span> 25.11.2020</a>
+                <a href="https://happybirthdayshowhelsinki.github.io/23122020"><span class="badge badge-success">!</span> 23.12.2020 <img src="https://happybirthdayshowhelsinki.github.io/favicon/favicon-32x32.png" alt="!"></a>
                 <a href="https://happybirthdayshowhelsinki.github.io/20012021">20.01.2021</a>
                 <a href="https://happybirthdayshowhelsinki.github.io/17022021">17.02.2021</a>
               </div>
