--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     <div class="jubilaeum-1 alert alert-success">
       <h2 class="jubilaeum-2">XXL-Jubiläumsausgabe: 23. Dezember 2020 17:30 Uhr</h2>
     </div>
-    <p class="corona-hinweis">Aufgrund des 2. Corona-Lockdowns und den damit verbundenen Ausgangsbeschränkungen kann die
-      XXL-Jubiläumsausgabe
+    <p class="corona-hinweis">Aufgrund des 2. Corona-Lockdowns und den damit verbundenen Ausgangsbeschränkungen konnte
+      die XXL-Jubiläumsausgabe
       nicht wie geplant am 25.11. stattfinden und wird voraussichtlich auf 23.12. um 17:30 Uhr verschoben, allerdings
       hält dieser Termin nur,
       wenn der Lockdown wie geplant mit 6. Dezember zu Ende geht.</p>
