--- a/23122020/index.html
+++ b/23122020/index.html
@@ -32,7 +32,8 @@
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <h2 class="jubilaeum-1 jubilaeum-2 alert alert-success">XXL-Jubiläumsausgabe am 23.12.2020 um 17:30 Uhr</h2>
-    <p class="corona-hinweis corona-hinweis-abstand">Aufgrund des 2. Corona-Lockdowns und den damit verbundenen Ausgangsbeschränkungen kann die
+    <p class="corona-hinweis corona-hinweis-abstand">Aufgrund des 2. Corona-Lockdowns und den damit verbundenen
+      Ausgangsbeschränkungen konnte die
       XXL-Jubiläumsausgabe
       nicht wie geplant am 25.11. stattfinden und wird voraussichtlich auf 23.12. um 17:30 Uhr verschoben, allerdings
       hält dieser Termin nur,
