--- a/25112020/index.html
+++ b/25112020/index.html
@@ -32,7 +32,7 @@
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <p class="corona-hinweis">Aufgrund des 2. Corona-Lockdowns und den damit verbundenen
-      Ausgangsbeschränkungen kann die
+      Ausgangsbeschränkungen konnte die
       XXL-Jubiläumsausgabe
       nicht wie geplant am 25.11. stattfinden und wird voraussichtlich auf 23.12. um 17:30 Uhr verschoben, allerdings
       hält dieser Termin nur,
@@ -42,9 +42,14 @@
       allerersten Happy Birthday Show vom 1.12.2019!</p>
     <p>"Heute feiern wir mit Mat Kearney, Billy Paul, Lost Frequencies und Sido. Die erste Sendung von Christian
       Steinberger."</p>
+    <div class="col-md-6">
+      <iframe src="https://cba.fro.at/434880/embed?&waveform=false" width="100%" height="99"
+        style="border:none; width:100%; height:99px;"></iframe>
+    </div>
     <p><a href="https://helsinki.at/program/100487" target="_blank">Programmhinweis auf der Radio Helsinki
         Homepage</a>
     </p>
+    <p><a href="https://cba.fro.at/434880" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
     <p>Sie können diese Sendung am 25.11.2020 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
   </div>
