--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,9 +30,13 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/25112020">25.11.2020</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/28102020">28.10.2020</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/30092020">30.09.2020</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/02092020">02.09.2020</a></p>
+        <p><span class="datum">02.09.2020:</span><br>Mit Freddie Mercury, Pink, Avicii und Namika<br><a
+                href="https://helsinki.at/program/98259" target="_blank">Programmhinweis auf der Radio Helsinki
+                Homepage</a><br><a href="https://cba.fro.at/464096" target="_blank">Sendung zum Nachhören auf der
+                CBA-Plattform</a></p>
         <p><span class="datum">05.08.2020:</span><br>Mit Helene Fischer, Carlos Vives, Shawn Mendes und Geri
             Halliwell<br><a href="https://helsinki.at/program/98258" target="_blank">Programmhinweis auf der Radio
                 Helsinki
