Update Corona Hinweis

--- a/index.html
+++ b/index.html
@@ -68,13 +68,11 @@
     <div class="jubilaeum-1 alert alert-success">
       <h2 class="jubilaeum-2">XXL-Jubiläumsausgabe: 23. Dezember 2020 17:30 Uhr</h2>
     </div>
-    <p class="corona-hinweis">Aufgrund des 2. Corona-Lockdowns und den damit verbundenen Ausgangsbeschränkungen konnte
+    <p class="corona-hinweis corona-hinweis-abstand">Aufgrund des 2. Corona-Lockdowns und den damit verbundenen Ausgangsbeschränkungen konnte
       die XXL-Jubiläumsausgabe
       nicht wie geplant am 25.11. stattfinden und wird voraussichtlich auf 23.12. um 17:30 Uhr verschoben, allerdings
       hält dieser Termin nur,
       wenn der Lockdown wie geplant mit 6. Dezember zu Ende geht.</p>
-    <p class="corona-hinweis corona-hinweis-abstand">Damit es am 25.11. trotzdem ein Geburtstags-Feeling gibt,
-      hören Sie von 18 bis 19 Uhr eine Wiederholung der allerersten Happy Birthday Show vom 1.12.2019!</p>
     <h3 class="jubilaeum-3">Die Happy Birthday Show wird ein Jahr alt!</h3>
     <p>Und wenn eine Geburtstags-Sendung Geburtstag hat, dann wird das gebührend gefeiert. Deshalb gibt es am 23.
       Dezember 2020 eine XXL-Jubiläumsausgabe. Wir beginnen bereits um 17:30 Uhr statt wie normalerweise um 18:00 Uhr
