--- a/23122020/index.html
+++ b/23122020/index.html
@@ -32,6 +32,8 @@
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <h2 class="jubilaeum-1 jubilaeum-2 alert alert-success">XXL-Jubiläumsausgabe am 23.12.2020 um 17:30 Uhr</h2>
+    <p class="corona-hinweis">Update 6.12.: Momentan sieht es gut aus, laut aktuellem Stand kann die
+      XXL-Jubiläumsausgabe am 23.12. stattfinden.</p>
     <p class="corona-hinweis corona-hinweis-abstand">Aufgrund des 2. Corona-Lockdowns und den damit verbundenen
       Ausgangsbeschränkungen konnte die
       XXL-Jubiläumsausgabe
