--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
     <div class="jubilaeum-1 alert alert-success">
       <h2 class="jubilaeum-2">XXL-Jubiläumsausgabe: 23. Dezember 2020 17:30 Uhr</h2>
     </div>
-    <p class="corona-hinweis corona-hinweis-abstand">Aufgrund des 2. Corona-Lockdowns und den damit verbundenen Ausgangsbeschränkungen konnte
+    <p class="corona-hinweis">Update 6.12.: Momentan sieht es gut aus, laut aktuellem Stand kann die
+      XXL-Jubiläumsausgabe am 23.12. stattfinden.</p>
+    <p class="corona-hinweis corona-hinweis-abstand">Aufgrund des 2. Corona-Lockdowns und den damit verbundenen
+      Ausgangsbeschränkungen konnte
       die XXL-Jubiläumsausgabe
       nicht wie geplant am 25.11. stattfinden und wird voraussichtlich auf 23.12. um 17:30 Uhr verschoben, allerdings
       hält dieser Termin nur,
