--- a/25112020/index.html
+++ b/25112020/index.html
@@ -31,6 +31,8 @@
   <div class="content">
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
+    <p class="corona-hinweis">Update 6.12.: Momentan sieht es gut aus, laut aktuellem Stand kann die
+      XXL-Jubiläumsausgabe am 23.12. stattfinden.</p>
     <p class="corona-hinweis">Aufgrund des 2. Corona-Lockdowns und den damit verbundenen
       Ausgangsbeschränkungen konnte die
       XXL-Jubiläumsausgabe
