--- a/25112020/index.html
+++ b/25112020/index.html
@@ -31,14 +31,10 @@
   <div class="content">
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
-    <p class="corona-hinweis">Update 6.12.: Momentan sieht es gut aus, laut aktuellem Stand kann die
-      XXL-Jubiläumsausgabe am 23.12. stattfinden.</p>
     <p class="corona-hinweis">Aufgrund des 2. Corona-Lockdowns und den damit verbundenen
       Ausgangsbeschränkungen konnte die
       XXL-Jubiläumsausgabe
-      nicht wie geplant am 25.11. stattfinden und wird voraussichtlich auf 23.12. um 17:30 Uhr verschoben, allerdings
-      hält dieser Termin nur,
-      wenn der Lockdown wie geplant mit 6. Dezember zu Ende geht.</p>
+      nicht wie geplant am 25.11. stattfinden und wird auf 23.12. um 17:30 Uhr verschoben.</p>
     <h2>Sendung am 25.11.2020</h2>
     <p>Damit es heute trotzdem ein Geburtstags-Feeling gibt, hören Sie von 18 bis 19 Uhr eine Wiederholung der
       allerersten Happy Birthday Show vom 1.12.2019!</p>
