--- a/23122020/index.html
+++ b/23122020/index.html
@@ -32,45 +32,26 @@
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <h2 class="jubilaeum-1 jubilaeum-2 alert alert-success">XXL-Jubiläumsausgabe am 23.12.2020 um 17:30 Uhr</h2>
-    <p class="corona-hinweis">Update 6.12.: Momentan sieht es gut aus, laut aktuellem Stand kann die
-      XXL-Jubiläumsausgabe am 23.12. stattfinden.</p>
-    <p class="corona-hinweis corona-hinweis-abstand">Aufgrund des 2. Corona-Lockdowns und den damit verbundenen
-      Ausgangsbeschränkungen konnte die
-      XXL-Jubiläumsausgabe
-      nicht wie geplant am 25.11. stattfinden und wird voraussichtlich auf 23.12. um 17:30 Uhr verschoben, allerdings
-      hält dieser Termin nur,
-      wenn der Lockdown wie geplant mit 6. Dezember zu Ende geht.</p>
     <h3 class="jubilaeum-3">Die Happy Birthday Show wird ein Jahr alt!</h3>
-    <div class="row">
-      <div class="col-md-8">
-        <p>Und wenn eine Geburtstags-Sendung Geburtstag hat, dann wird das gefeiert. Deshalb gibt es am 23.
-          Dezember 2020 eine XXL-Jubiläumsausgabe. Wir beginnen bereits um 17:30 Uhr statt wie normalerweise um 18:00
-          Uhr
-          und haben somit 90 statt wie üblich 60 Minuten. Neben dem üblichen Programm, also den MusikerInnen die
-          Geburtstag
-          haben, wird es dieses Mal auch ein paar Hintergrundinformationen zur Happy Birthday Show geben. Genauere
-          Inhalte
-          werden noch bekannt gegeben... &#128521;</p>
-        <div class="jubilaeum-large">
-          <p><a href="https://helsinki.at/program/102253" target="_blank">Programmhinweis auf der Radio Helsinki
-              Homepage</a>
-          </p>
-          <p>Sie können die XXL-Jubiläumsausgabe am 23.12.2020 von 17:30 bis 19 Uhr in Graz auf der Frequenz 92,6 oder
-            im <a href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
-        </div>
-      </div>
-      <div class="col-md-4 jubilaeum-center">
-        <img class="jubilaeums-foto" src="https://happybirthdayshowhelsinki.github.io/galerie/jubilaeumsausgabe.jpg"
-          alt="Jubiläumsausgabe">
-      </div>
+    <div class="jubilaeum-center">
+      <img class="jubilaeums-foto" src="https://happybirthdayshowhelsinki.github.io/galerie/jubilaeumsausgabe.jpg"
+        alt="Jubiläumsausgabe">
     </div>
-    <div class="jubilaeum-small">
-      <p><a href="https://helsinki.at/program/102253" target="_blank">Programmhinweis auf der Radio Helsinki
-          Homepage</a>
-      </p>
-      <p>Sie können die XXL-Jubiläumsausgabe am 23.12.2020 von 17:30 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
-          href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
-    </div>
+    <p>Und wenn eine Geburtstags-Sendung Geburtstag hat, dann wird das gefeiert. Deshalb gibt es am 23.
+      Dezember 2020 eine XXL-Jubiläumsausgabe. Wir beginnen bereits um 17:30 Uhr statt wie normalerweise um 18:00
+      Uhr
+      und haben somit 90 statt wie üblich 60 Minuten.</p>
+    <p>Wir feiern gemeinsam mit Keith Richards von The Rolling Stones, Sia, Schiffkowitz von STS und Annie Lennox.
+      Nachdem morgen Weihnachten ist, schauen wir uns an, woher Weihnachten eigentlich kommt. Am Montag war der
+      Gründungstag von Mariazell. Außerdem war am Montag Wintersonnenwende, also der kürzeste Tag im Jahr. Und sie
+      erfahren in dieser Sendung auch einige Hintergrundinformationen zur Happy Birthday Show, zum Beispiel wie der
+      Jingle entstand. Beginnen werden wir die XXL-Jubiläumsausgabe übrigens mit der ersten Moderation in der
+      allerersten Happy Birthday Show am 1. Dezember 2019 und dem ersten Lied: Mat Kearney – Coming Home.</p>
+    <p><a href="https://helsinki.at/program/102253" target="_blank">Programmhinweis auf der Radio Helsinki
+        Homepage</a>
+    </p>
+    <p>Sie können die XXL-Jubiläumsausgabe am 23.12.2020 von 17:30 bis 19 Uhr in Graz auf der Frequenz 92,6 oder
+      im <a href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
