Seit wann gibt es die Happy Birthday Show?

--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
     <p>Die Happy Birthday Show wird vom 16-jährigen Christian Steinberger moderiert. Christian Steinberger besucht
       derzeit das Bundesgymnasium GIBS in Graz-Eggenberg. Er ist der jüngste Sendungsmachende bei Radio Helsinki. <a
         href="https://happybirthdayshowhelsinki.github.io/galerie/">Galerie</a></p>
+    <h2>Seit wann gibt es die Happy Birthday Show?</h2>
+    <p>Die erste Happy Birthday Show fand am 1. Dezember 2019 im Rahmen der Radio Helsinki Probebühne statt. Ihren fixen
+      Platz im Radio Helsinki Programm hat die Happy Birthday Show seit dem 25. Dezember 2019. Seit dem 13. Mai 2020 hat
+      die Happy Birthday Show außerdem einen eigenen Sendungs-Jingle.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
