--- a/23122020/index.html
+++ b/23122020/index.html
@@ -43,7 +43,7 @@
       und haben somit 90 statt wie üblich 60 Minuten.</p>
     <p>Wir feiern gemeinsam mit Keith Richards von The Rolling Stones, Sia, Schiffkowitz von STS und Annie Lennox.
       Nachdem morgen Weihnachten ist, schauen wir uns an, woher Weihnachten eigentlich kommt. Am Montag war der
-      Gründungstag von Mariazell. Außerdem war am Montag Wintersonnenwende, also der kürzeste Tag im Jahr. Und sie
+      Gründungstag von Mariazell. Außerdem war am Montag Wintersonnenwende, also der kürzeste Tag im Jahr. Und Sie
       erfahren in dieser Sendung auch einige Hintergrundinformationen zur Happy Birthday Show, zum Beispiel wie der
       Jingle entstand. Beginnen werden wir die XXL-Jubiläumsausgabe übrigens mit der ersten Moderation in der
       allerersten Happy Birthday Show am 1. Dezember 2019 und dem ersten Lied: Mat Kearney – Coming Home.</p>
