--- a/23122020/index.html
+++ b/23122020/index.html
@@ -32,6 +32,8 @@
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <h2 class="jubilaeum-1 jubilaeum-2 alert alert-success">XXL-Jubiläumsausgabe am 23.12.2020 um 17:30 Uhr</h2>
+    <iframe src="https://cba.fro.at/484338/embed?&waveform=false" width="100%" height="99"
+      style="border:none; width:100%; height:99px; padding-top: 5px;"></iframe>
     <h3 class="jubilaeum-3">Die Happy Birthday Show wird ein Jahr alt!</h3>
     <div class="jubilaeum-center">
       <img class="jubilaeums-foto" src="https://happybirthdayshowhelsinki.github.io/galerie/jubilaeumsausgabe.jpg"
@@ -49,8 +51,7 @@
     <p><a href="https://helsinki.at/program/102253" target="_blank">Programmhinweis auf der Radio Helsinki
         Homepage</a>
     </p>
-    <p>Sie können die XXL-Jubiläumsausgabe am 23.12.2020 von 17:30 bis 19 Uhr in Graz auf der Frequenz 92,6 oder
-      im <a href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <p><a href="https://cba.fro.at/484338" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
