--- a/20012021/index.html
+++ b/20012021/index.html
@@ -34,7 +34,10 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/101403" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute gibt es eine Wiederholung der Sendung vom 22.01.2020.</p>
+    <p>"Heute feieren wir mit Wincent Weiss, Melendi, Michel Telo und Calvin Harris. 22 Tage sind seit Neujahr
+      vergangen, gehen die GrazerInnen ihren Neujahrsvorsätzen noch nach oder sind diese bereits vergessen? Ich war in
+      der Innenstadt unterwegs und habe die Leute gefragt, ihre Antworten gibt es in der heutigen Sendung."</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
