--- a/20012021/index.html
+++ b/20012021/index.html
@@ -30,12 +30,15 @@
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <h2>Sendung am 20.01.2021</h2>
-    <p>Sie können diese Sendung am 20.01.2021 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
-        href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <div class="col-md-6">
+      <iframe src="https://cba.fro.at/440141/embed?&waveform=false" width="100%" height="99"
+        style="border:none; width:100%; height:99px;"></iframe>
+    </div>
     <p><a href="https://helsinki.at/program/101403" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
+    <p><a href="https://cba.fro.at/440141" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
     <p>Heute gibt es eine Wiederholung der Sendung vom 22.01.2020.</p>
-    <p>"Heute feieren wir mit Wincent Weiss, Melendi, Michel Telo und Calvin Harris. 22 Tage sind seit Neujahr
+    <p>"Heute feiern wir mit Wincent Weiss, Melendi, Michel Telo und Calvin Harris. 22 Tage sind seit Neujahr
       vergangen, gehen die GrazerInnen ihren Neujahrsvorsätzen noch nach oder sind diese bereits vergessen? Ich war in
       der Innenstadt unterwegs und habe die Leute gefragt, ihre Antworten gibt es in der heutigen Sendung."</p>
   </div>
