--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,9 +30,13 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/20012021">20.01.2021</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/23122020">23.12.2020</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/25112020">25.11.2020</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/28102020">28.10.2020</a></p>
+        <p><span class="datum">28.10.2020:</span><br>Mit Katy Perry, Mark Sheehan, Sigala und Annette Humpe<br><a
+                href="https://helsinki.at/program/98261" target="_blank">Programmhinweis auf der Radio Helsinki
+                Homepage</a><br><a href="https://cba.fro.at/476350" target="_blank">Sendung zum Nachhören auf der
+                CBA-Plattform</a></p>
         <p><span class="datum">30.09.2020:</span><br>Mit Udo Jürgens, Avril Lavigne, Sting und Leigh-Anne Pinnock<br><a
                 href="https://helsinki.at/program/98260" target="_blank">Programmhinweis auf der Radio Helsinki
                 Homepage</a><br><a href="https://cba.fro.at/466775" target="_blank">Sendung zum Nachhören auf der
