--- a/17022021/index.html
+++ b/17022021/index.html
@@ -34,7 +34,8 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/101404" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Robbie Williams, Rihanna, The Weeknd und Michelle. Am 22. Februar hat George Washington, der
+      erste Präsident der USA, Geburtstag. Außerdem ist heute Tag der spontanen Nettigkeiten.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
