--- a/09062021/index.html
+++ b/09062021/index.html
@@ -5,8 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-
   <link rel="apple-touch-icon" sizes="180x180"
     href="https://happybirthdayshowhelsinki.github.io/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32"
@@ -21,7 +19,7 @@
   <meta name="msapplication-config" content="https://happybirthdayshowhelsinki.github.io/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
-  <title>Sendung am 25.11.2020 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
+  <title>Sendung am 09.06.2021 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
   <link rel="stylesheet" href="/styles/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles/stylesheet.css">
@@ -31,25 +29,12 @@
   <div class="content">
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
-    <p class="corona-hinweis">Aufgrund des 2. Corona-Lockdowns und den damit verbundenen
-      Ausgangsbeschränkungen konnte die
-      XXL-Jubiläumsausgabe
-      nicht wie geplant am 25.11. stattfinden und wird auf 23.12. um 17:30 Uhr verschoben.</p>
-    <h2>Sendung am 25.11.2020</h2>
-    <p>Damit es heute trotzdem ein Geburtstags-Feeling gibt, hören Sie von 18 bis 19 Uhr eine Wiederholung der
-      allerersten Happy Birthday Show vom 1.12.2019!</p>
-    <p>"Heute feiern wir mit Mat Kearney, Billy Paul, Lost Frequencies und Sido. Die erste Sendung von Christian
-      Steinberger."</p>
-    <div class="col-md-6">
-      <iframe src="https://cba.fro.at/434880/embed?&waveform=false" width="100%" height="99"
-        style="border:none; width:100%; height:99px;"></iframe>
-    </div>
-    <p><a href="https://helsinki.at/program/100487" target="_blank">Programmhinweis auf der Radio Helsinki
-        Homepage</a>
-    </p>
-    <p><a href="https://cba.fro.at/434880" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
-    <p>Sie können diese Sendung am 25.11.2020 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
+    <h2>Sendung am 09.06.2021</h2>
+    <p>Sie können diese Sendung am 09.06.2021 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <!-- <p><a href="https://helsinki.at/program/101404" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
+    </p> -->
+    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
