--- a/17032021/index.html
+++ b/17032021/index.html
@@ -34,7 +34,9 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/101405" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Adam Levine von Maroon 5, Nena, Johannes Strate von Revolverheld und Lenka. Vergangenen
+      Sonntag hatte Albert Einstein Geburtstag. Außerdem ist am Freitag Josefitag, in der Steiermark ist dieser Tag
+      schulfrei.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
