--- a/07072021/index.html
+++ b/07072021/index.html
@@ -5,8 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-
   <link rel="apple-touch-icon" sizes="180x180"
     href="https://happybirthdayshowhelsinki.github.io/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32"
@@ -21,7 +19,7 @@
   <meta name="msapplication-config" content="https://happybirthdayshowhelsinki.github.io/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
-  <title>XXL-Jubiläumsausgabe am 23.12.2020 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
+  <title>Sendung am 07.07.2021 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
   <link rel="stylesheet" href="/styles/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles/stylesheet.css">
@@ -31,27 +29,12 @@
   <div class="content">
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
-    <h2 class="jubilaeum-1 jubilaeum-2 alert alert-success">XXL-Jubiläumsausgabe am 23.12.2020 um 17:30 Uhr</h2>
-    <iframe src="https://cba.fro.at/484338/embed?&waveform=false" width="100%" height="99"
-      style="border:none; width:100%; height:99px; padding-top: 5px;"></iframe>
-    <h3 class="jubilaeum-3">Die Happy Birthday Show wird ein Jahr alt!</h3>
-    <div class="jubilaeum-center">
-      <img class="jubilaeums-foto" src="https://happybirthdayshowhelsinki.github.io/galerie/jubilaeumsausgabe.jpg"
-        alt="Jubiläumsausgabe">
-    </div>
-    <p>Und wenn eine Geburtstags-Sendung Geburtstag hat, dann wird das gefeiert. Deshalb gibt es am 23.
-      Dezember 2020 eine XXL-Jubiläumsausgabe. Wir beginnen bereits um 17:30 Uhr statt wie normalerweise um 18:00
-      Uhr
-      und haben somit 90 statt wie üblich 60 Minuten.</p>
-    <p>Wir feiern gemeinsam mit Keith Richards von The Rolling Stones, Sia, Schiffkowitz von STS und Annie Lennox. Am
-      Montag war der Gründungstag von Mariazell. Außerdem war am Montag Wintersonnenwende, also der kürzeste Tag im
-      Jahr. Und Sie erfahren in dieser Sendung auch einige Hintergrundinformationen zur Happy Birthday Show, zum
-      Beispiel wie der Jingle entstand. Beginnen werden wir die XXL-Jubiläumsausgabe übrigens mit der ersten Moderation
-      in der allerersten Happy Birthday Show am 1. Dezember 2019 und dem ersten Lied: Mat Kearney – Coming Home.</p>
-    <p><a href="https://helsinki.at/program/102253" target="_blank">Programmhinweis auf der Radio Helsinki
-        Homepage</a>
+    <h2>Sendung am 07.07.2021</h2>
+    <p>Sie können diese Sendung am 07.07.2021 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
+        href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <p><a href="https://helsinki.at/program/105030" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p><a href="https://cba.fro.at/484338" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
+    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
