--- a/17032021/index.html
+++ b/17032021/index.html
@@ -30,10 +30,13 @@
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <h2>Sendung am 17.03.2021</h2>
-    <p>Sie können diese Sendung am 17.03.2021 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
-        href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <div class="col-md-6">
+      <iframe src="https://cba.fro.at/493413/embed?&waveform=false" width="100%" height="99"
+        style="border:none; width:100%; height:99px;"></iframe>
+    </div>
     <p><a href="https://helsinki.at/program/101405" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
+    <p><a href="https://cba.fro.at/493413" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
     <p>Heute feiern wir mit Adam Levine von Maroon 5, Nena, Johannes Strate von Revolverheld und Lenka. Vergangenen
       Sonntag hatte Albert Einstein Geburtstag. Außerdem ist am Freitag Josefitag, in der Steiermark ist dieser Tag
       schulfrei.</p>
