Profilbild + Christian in the Mix

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
       </div>
     </div>
-    
+
     <h2 class="firstHeading">Was ist die Happy Birthday Show?</h2>
     <p>Die Happy Birthday Show ist eine Sendung auf Radio Helsinki in Graz, die jeden vierten Mittwoch von 18 bis 19 Uhr
       zu
@@ -75,9 +75,18 @@
       die Sendungen auch auf der <a href="https://cba.fro.at/series/happy-birthday-show"
         target="_blank">CBA-Plattform</a> nachhören.</p>
     <h2>Wer moderiert die Happy Birthday Show?</h2>
-    <p>Die Happy Birthday Show wird vom 16-jährigen Christian Steinberger moderiert. Christian Steinberger besucht
-      derzeit das Bundesgymnasium GIBS in Graz-Eggenberg. Er ist der jüngste Sendungsmachende bei Radio Helsinki. <a
-        href="https://happybirthdayshowhelsinki.github.io/galerie/">Galerie</a></p>
+    <div class="row">
+      <div class="col-md-10">
+        <p>Die Happy Birthday Show wird vom 16-jährigen Christian Steinberger moderiert. Christian Steinberger besucht
+          derzeit das Bundesgymnasium GIBS in Graz-Eggenberg. Er ist der jüngste Sendungsmachende bei Radio Helsinki.
+          Neben
+          der Happy Birthday Show moderiert er auch noch die Sendung <a
+            href="https://helsinki.at/program/shows/christian-mix" target="_blank">Christian in the Mix</a>.</p>
+      </div>
+      <div class="col-md-2 text-center">
+        <img src="galerie/profilbild.jpg" alt="Profilbild" id="profilbild">
+      </div>
+    </div>
     <h2>Seit wann gibt es die Happy Birthday Show?</h2>
     <p>Die erste Happy Birthday Show fand am 1. Dezember 2019 im Rahmen der Radio Helsinki Probebühne statt. Ihren fixen
       Platz im Radio Helsinki Programm hat die Happy Birthday Show seit dem 25. Dezember 2019. Seit dem 13. Mai 2020 hat
