--- a/14042021/index.html
+++ b/14042021/index.html
@@ -34,7 +34,8 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/105027" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Luis Fonsi, Freya Ridings, Brendon Urie von Panic at the Disco und Amy Diamond. Morgen hat
+      Leonardo Da Vinci Geburtstag. Und übermorgen hat der Schauspieler Charlie Chaplin Geburtstag.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
