--- a/14042021/index.html
+++ b/14042021/index.html
@@ -35,7 +35,7 @@
     <p><a href="https://helsinki.at/program/105027" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
     <p>Heute feiern wir mit Luis Fonsi, Freya Ridings, Brendon Urie von Panic at the Disco und Amy Diamond. Morgen hat
-      Leonardo Da Vinci Geburtstag. Und übermorgen hat der Schauspieler Charlie Chaplin Geburtstag.</p>
+      Leonardo Da Vinci Geburtstag. Seit 2017 wird am 15. April deshalb auch der Tag der Kunst gefeiert.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
