--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -96,6 +96,7 @@
     </div>
     <h2 id="impressum">Impressum</h2>
     <p>Christian Steinberger<br>Radio Helsinki 92,6 MHz - Freies Radio Graz<br>Schönaugasse 8<br>8010 Graz</p>
+    <p><a href="https://happybirthdayshowhelsinki.github.io/datenschutz">Datenschutz</a></p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
