--- a/04082021/index.html
+++ b/04082021/index.html
@@ -19,7 +19,7 @@
   <meta name="msapplication-config" content="https://happybirthdayshowhelsinki.github.io/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
-  <title>Sendung am 20.01.2021 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
+  <title>Sendung am 04.08.2021 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
   <link rel="stylesheet" href="/styles/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles/stylesheet.css">
@@ -29,18 +29,12 @@
   <div class="content">
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
-    <h2>Sendung am 20.01.2021</h2>
-    <div class="col-md-6">
-      <iframe src="https://cba.fro.at/440141/embed?&waveform=false" width="100%" height="99"
-        style="border:none; width:100%; height:79px; margin-bottom: 10px;"></iframe>
-    </div>
-    <p><a href="https://helsinki.at/program/101403" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
+    <h2>Sendung am 04.08.2021</h2>
+    <p>Sie können diese Sendung am 04.08.2021 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
+        href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <p><a href="https://helsinki.at/program/105031" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p><a href="https://cba.fro.at/440141" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
-    <p>Heute gibt es eine Wiederholung der Sendung vom 22.01.2020.</p>
-    <p>"Heute feiern wir mit Wincent Weiss, Melendi, Michel Telo und Calvin Harris. 22 Tage sind seit Neujahr
-      vergangen, gehen die GrazerInnen ihren Neujahrsvorsätzen noch nach oder sind diese bereits vergessen? Ich war in
-      der Innenstadt unterwegs und habe die Leute gefragt, ihre Antworten gibt es in der heutigen Sendung."</p>
+    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
