--- a/04082021/index.html
+++ b/04082021/index.html
@@ -29,8 +29,8 @@
   <div class="content">
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
-    <h2>Sendung am 04.08.2021</h2>
-    <p>Sie können diese Sendung am 04.08.2021 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
+    <h2><span class="wiederholung-2">Sendung am 04.08.2021 um 18:00 Uhr</span><span class="wiederholung-1">WH am 18.08. um 01:00 Uhr</span></h2>
+    <p>Sie können diese Sendung am 04.08.2021 von 18 bis 19 Uhr, sowie am 18.08.2021 von 1 bis 2 Uhr, in Graz auf der Frequenz 92,6 oder im <a
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/105031" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
