--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+
   <link rel="apple-touch-icon" sizes="180x180"
     href="https://happybirthdayshowhelsinki.github.io/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32"
@@ -63,24 +65,35 @@
       </div>
     </div>
 
+    <div class="announcement-1 alert alert-success">
+      <h2 class="announcement-font">Extra Sendetermin ab 28.04.2021</h2>
+    </div>
+    <h3 class="announcement-2 announcement-font">Jeden vierten Mittwoch von 1 bis 2 Uhr in der Früh</h3>
+    <p>Im Rahmen der <a href="https://radiosendung.at/jugendnacht/" target="_blank">Radio Helsinki Jugendnacht</a>
+      bekommt die Happy Birthday Show ab 28.04.2021 einmal im Monat einen zusätzlichen Sendetermin und zwar jeden
+      vierten Mittwoch von 1 bis 2 Uhr in der Früh (beginnend mit 28.04.). Sie hören zu dieser Zeit eine Wiederholung
+      der jeweils letzten Happy Birthday Show.</p>
+    <div class="announcement-torte-div"><img class="announcement-torte-img" src="favicon/android-chrome-192x192.png"
+        alt="Happy Birthday"></div>
+
     <h2 class="firstHeading">Was ist die Happy Birthday Show?</h2>
     <p>Die Happy Birthday Show ist eine Sendung auf Radio Helsinki in Graz, die jeden vierten Mittwoch von 18 bis 19 Uhr
-      zu
-      hören ist. In jeder Sendung werden MusikerInnen vorgestellt, die um den Sendetag herum Geburtstag haben. Von ihnen
-      wird Musik gespielt, dazwischen gibt es Informationen zu den MusikerInnen. Außerdem werden auch immer
-      tagesaktuelle Themen besprochen.</p>
+      zu hören ist (Wiederholung jeweils zwei Wochen später am Mittwoch von 1 bis 2 Uhr in der Früh). In jeder Sendung
+      werden MusikerInnen vorgestellt, die um den Sendetag herum Geburtstag haben. Von ihnen wird Musik gespielt,
+      dazwischen gibt es Informationen zu den MusikerInnen. Außerdem werden auch immer tagesaktuelle Themen besprochen.
+    </p>
     <h2>Wie kann ich die Happy Birthday Show anhören?</h2>
     <p>Jeden vierten Mittwoch ist die Happy Birthday Show von 18 bis 19 Uhr auf Radio Helsinki in Graz auf der Frequenz
-      92,6 und im <a href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> zu hören. Sie können
-      die Sendungen auch auf der <a href="https://cba.fro.at/series/happy-birthday-show"
+      92,6 und im <a href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> zu hören. Eine
+      Wiederholung der Sendungen gibt es am Mittwoch zwei Wochen später zwischen 1 und 2 Uhr in der Früh zu hören.
+      Sie können die Sendungen auch auf der <a href="https://cba.fro.at/series/happy-birthday-show"
         target="_blank">CBA-Plattform</a> nachhören.</p>
     <h2>Wer moderiert die Happy Birthday Show?</h2>
     <div class="row">
       <div class="col-md-10">
         <p>Die Happy Birthday Show wird vom 16-jährigen Christian Steinberger moderiert. Christian Steinberger besucht
           derzeit das Bundesgymnasium GIBS in Graz-Eggenberg. Er ist der jüngste Sendungsmachende bei Radio Helsinki.
-          Neben
-          der Happy Birthday Show moderiert er auch noch die Sendung <a
+          Neben der Happy Birthday Show moderiert er auch noch die Sendung <a
             href="https://helsinki.at/program/shows/christian-mix" target="_blank">Christian in the Mix</a>.</p>
       </div>
       <div class="col-md-2 text-center">
@@ -90,7 +103,9 @@
     <h2>Seit wann gibt es die Happy Birthday Show?</h2>
     <p>Die erste Happy Birthday Show fand am 1. Dezember 2019 im Rahmen der Radio Helsinki Probebühne statt. Ihren fixen
       Platz im Radio Helsinki Programm hat die Happy Birthday Show seit dem 25. Dezember 2019. Seit dem 13. Mai 2020 hat
-      die Happy Birthday Show außerdem einen eigenen Sendungs-Jingle.</p>
+      die Happy Birthday Show außerdem einen eigenen Sendungs-Jingle. Seit dem 28. April 2021 hat die Happy Birthday
+      Show einen zusätzlichen Sendeplatz für Wiederholungen alle vier Wochen am Mittwoch in der Früh und ist damit Teil
+      der <a href="https://radiosendung.at/jugendnacht/" target="_blank">Radio Helsinki Jugendnacht</a>.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
