--- a/17022021/index.html
+++ b/17022021/index.html
@@ -29,7 +29,7 @@
   <div class="content">
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
-    <h2>Sendung am 17.02.2021</h2>
+    <h2>Sendung am 17.02.2021 um 18:00 Uhr</h2>
     <div class="col-md-6">
       <iframe src="https://cba.fro.at/489755/embed?&waveform=false" width="100%" height="99"
         style="border:none; width:100%; height:79px; margin-bottom: 10px;"></iframe>
