--- a/index.html
+++ b/index.html
@@ -66,6 +66,18 @@
     </div>
 
     <div class="announcement-1 alert alert-success">
+      <h2 class="announcement-font">Verändertes Sendungskonzept ab 12.05.2021</h2>
+    </div>
+    <h3 class="announcement-2 announcement-font">Mit Musik von MusikerInnen die in diesem Monat Geburtstag haben</h3>
+    <p>Ab 12. Mai 2021 wird das Sendungskonzept der Happy Birthday Show überarbeitet. Es gibt dann nicht wie bisher
+      Musik von MusikerInnen die um den Sendetag herum Geburtstag haben, sondern generell MusikerInnen die im jeweiligen
+      Monat Geburtstag haben. Der Grund dafür ist sehr einfach: Nach über einem Jahr Happy Birthday Show, sind die
+      Sendungen dieses Jahr fast an den gleichen Tagen wie letztes Jahr (z.B. 2020: 13. Mai, 2021: 12. Mai). Diese
+      Veränderung soll verhindern, dass der Inhalt von Sendungen aus dem Vorjahr wiederholt wird.</p>
+    <div class="announcement-torte-div"><img class="announcement-torte-img" src="favicon/android-chrome-192x192.png"
+        alt="Happy Birthday"></div>
+
+    <div class="announcement-1 alert alert-success">
       <h2 class="announcement-font">Extra Sendetermin ab 28.04.2021</h2>
     </div>
     <h3 class="announcement-2 announcement-font">Jeden vierten Mittwoch von 1 bis 2 Uhr in der Früh</h3>
@@ -79,7 +91,7 @@
     <h2 class="firstHeading">Was ist die Happy Birthday Show?</h2>
     <p>Die Happy Birthday Show ist eine Sendung auf Radio Helsinki in Graz, die jeden vierten Mittwoch von 18 bis 19 Uhr
       zu hören ist (Wiederholung jeweils zwei Wochen später am Mittwoch von 1 bis 2 Uhr in der Früh). In jeder Sendung
-      werden MusikerInnen vorgestellt, die um den Sendetag herum Geburtstag haben. Von ihnen wird Musik gespielt,
+      werden MusikerInnen vorgestellt, die im jeweiligen Monat Geburtstag haben. Von ihnen wird Musik gespielt,
       dazwischen gibt es Informationen zu den MusikerInnen. Außerdem werden auch immer tagesaktuelle Themen besprochen.
     </p>
     <h2>Wie kann ich die Happy Birthday Show anhören?</h2>
