--- a/12052021/index.html
+++ b/12052021/index.html
@@ -34,7 +34,8 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/105028" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Marie Fredriksson von Roxette, Rea Garvey, Olly Murs und Cher. Morgen ist internationaler Hummus Tag. Der Schauspieler Clint Eastwood hat am 31. Mai Geburtstag.</p>
+    <p>Ab heute werden übrigens nicht nur MusikerInnen vorgestellt, die um den Sendetag herum Geburtstag haben, sondern generell im Sendemonat.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
