Von 2019 bis heute

--- a/index.html
+++ b/index.html
@@ -112,12 +112,17 @@
         <img src="galerie/profilbild.jpg" alt="Profilbild" id="profilbild">
       </div>
     </div>
-    <h2>Seit wann gibt es die Happy Birthday Show?</h2>
-    <p>Die erste Happy Birthday Show fand am 1. Dezember 2019 im Rahmen der Radio Helsinki Probebühne statt. Ihren fixen
-      Platz im Radio Helsinki Programm hat die Happy Birthday Show seit dem 25. Dezember 2019. Seit dem 13. Mai 2020 hat
-      die Happy Birthday Show außerdem einen eigenen Sendungs-Jingle. Seit dem 28. April 2021 hat die Happy Birthday
-      Show einen zusätzlichen Sendeplatz für Wiederholungen alle vier Wochen am Mittwoch in der Früh und ist damit Teil
-      der <a href="https://radiosendung.at/jugendnacht/" target="_blank">Radio Helsinki Jugendnacht</a>.</p>
+    <h2>Von 2019 bis heute...</h2>
+    <ul>
+      <li>Die erste Happy Birthday Show fand am 1. Dezember 2019 im Rahmen der Radio Helsinki Probebühne statt.</li>
+      <li>Ihren fixen Platz im Radio Helsinki Programm hat die Happy Birthday Show seit dem 25. Dezember 2019.</li>
+      <li>Seit dem 13. Mai 2020 hat die Happy Birthday Show einen eigenen Sendungs-Jingle.</li>
+      <li>Seit dem 28. April 2021 hat die Happy Birthday Show einen zusätzlichen Sendeplatz für Wiederholungen alle vier
+        Wochen am Mittwoch in der Früh und ist damit Teil der <a href="https://radiosendung.at/jugendnacht/"
+          target="_blank">Radio Helsinki Jugendnacht</a>.</li>
+      <li>Seit dem 12. Mai 2021 werden MusikerInnen vorgestellt, die im jeweiligen Monat Geburtstag haben (und nicht wie
+        bisher innerhalb einer Woche um den Sendetermin).</li>
+    </ul>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
