--- a/09062021/index.html
+++ b/09062021/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+
   <link rel="apple-touch-icon" sizes="180x180"
     href="https://happybirthdayshowhelsinki.github.io/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32"
@@ -30,11 +32,11 @@
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <h2><span class="wiederholung-2">Sendung am 09.06.2021 um 18:00 Uhr</span><span class="wiederholung-1">WH am 23.06. um 01:00 Uhr</span></h2>
-    <p>Sie können diese Sendung am 09.06.2021 von 18 bis 19 Uhr, sowie am 23.06.2021 von 1 bis 2 Uhr, in Graz auf der Frequenz 92,6 oder im <a
-        href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
-    <p><a href="https://helsinki.at/program/105029" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
-    </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <div class="alert alert-danger" style="text-align: center; margin-bottom: 20px;">
+      <h2 class="announcement-font">Entfällt</h2>
+    </div>
+    <p>Aufgrund einer <a href="https://helsinki.at/program/107872/" target="_blank">Sondersendung</a> auf Radio Helsinki entfällt diese Ausgabe der Happy Birhtday Show.
+      Beim Wiederholungstermin am 23. Juni gibt es die Sendung vom 10.06.2020 zu hören.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
