--- a/standard.html
+++ b/standard.html
@@ -20,7 +20,7 @@
               <button onclick="myFunction()" class="dropbtn">Kommende Sendungen</button>
               <div id="myDropdown" class="dropdown-content">
                 <a href="https://happybirthdayshowhelsinki.github.io/12052021">12.05.2021</a>
-                <a href="https://happybirthdayshowhelsinki.github.io/09062021">09.06.2021</a>
+                <a href="https://happybirthdayshowhelsinki.github.io/09062021"><del style="color: #dc3545;">09.06.2021</del> <span class="badge badge-danger">!</span></a>
                 <a href="https://happybirthdayshowhelsinki.github.io/07072021">07.07.2021</a>
                 <a href="https://happybirthdayshowhelsinki.github.io/04082021">04.08.2021</a>
               </div>
