--- a/12052021/index.html
+++ b/12052021/index.html
@@ -30,10 +30,13 @@
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <h2><span class="wiederholung-2">Sendung am 12.05.2021 um 18:00 Uhr</span><span class="wiederholung-1">WH am 26.05. um 01:00 Uhr</span></h2>
-    <p>Sie können diese Sendung am 12.05.2021 von 18 bis 19 Uhr, sowie am 26.05.2021 von 1 bis 2 Uhr, in Graz auf der Frequenz 92,6 oder im <a
-        href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <div class="col-md-6">
+      <iframe src="https://cba.fro.at/499872/embed?&waveform=false" width="100%" height="99"
+        style="border:none; width:100%; height:79px; margin-bottom: 10px;"></iframe>
+    </div>
     <p><a href="https://helsinki.at/program/105028" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
+    <p><a href="https://cba.fro.at/499872" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
     <p>Heute feiern wir mit Marie Fredriksson von Roxette, Rea Garvey, Olly Murs und Cher. Morgen ist internationaler Hummus Tag. Der Schauspieler Clint Eastwood hat am 31. Mai Geburtstag.</p>
     <p>Ab heute werden übrigens nicht nur MusikerInnen vorgestellt, die um den Sendetag herum Geburtstag haben, sondern generell im Sendemonat.</p>
   </div>
