--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,9 +30,13 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/12052021">12.05.2021</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/14042021">14.04.2021</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/17032021">17.03.2021</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/17022021">17.02.2021</a></p>
+        <p><span class="datum">17.02.2021:</span><br>Mit Robbie Williams, Rihanna, The Weeknd und Michelle<br><a
+                href="https://helsinki.at/program/101404" target="_blank">Programmhinweis auf der Radio Helsinki
+                Homepage</a><br><a href="https://cba.fro.at/489755" target="_blank">Sendung zum Nachhören auf der
+                CBA-Plattform</a></p>
         <p><span class="datum">20.01.2021:</span><br>Wiederholung vom 22.01.2020: Mit Wincent Weiss, Melendi, Michel
             Telo und Calvin Harris<br><a href="https://helsinki.at/program/101403" target="_blank">Programmhinweis auf
                 der Radio Helsinki Homepage</a><br><a href="https://cba.fro.at/440141" target="_blank">Sendung zum
