--- a/07072021/index.html
+++ b/07072021/index.html
@@ -34,7 +34,8 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/105030" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Selena Gomez, Jason Wade von Lifehouse, Hugo Helmig und Stefanie Werger. Am 14. Juli ist der
+      Nationalfeiertag in Frankreich. Außerdem hat der englische Fußballspieler Harry Kane am 28. Juli Geburtstag.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
