--- a/07072021/index.html
+++ b/07072021/index.html
@@ -35,7 +35,8 @@
     <p><a href="https://helsinki.at/program/105030" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
     <p>Heute feiern wir mit Selena Gomez, Jason Wade von Lifehouse, Hugo Helmig und Stefanie Werger. Am 14. Juli ist der
-      Nationalfeiertag in Frankreich. Außerdem hat der englische Fußballspieler Harry Kane am 28. Juli Geburtstag.</p>
+      Nationalfeiertag in Frankreich. Außerdem hat der österreichische Fußballspieler Sa&scaron;a
+      Kalajd&zcaron;i&cacute;, der beim EM-Achtelfinale das Tor gegen Italien erzielt hat, heute Geburtstag.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
