--- a/01092021/index.html
+++ b/01092021/index.html
@@ -34,7 +34,8 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/105032" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Morten Harket von a-ha, Alice Merton, Kygo und Amy Winehouse. Der kroatische Fußballspieler Luka Modri&cacute;
+       hat am 9. September Geburtstag. Außerdem ist heute in Deutschland Tag des Zebrastreifens.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
