--- a/27102021/index.html
+++ b/27102021/index.html
@@ -34,7 +34,8 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/105034" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit John Lennon von den Beatles, Jess Glynne, Bruno Mars und Dannii Minogue. Am 12. Oktober war der Nationalfeiertag von
+      Spanien. Außerdem hatte der Maler Pablo Picasso am 25. Oktober Geburtstag.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
