--- a/24112021/index.html
+++ b/24112021/index.html
@@ -39,7 +39,7 @@
         Uhr</span></div>
     <h3 class="announcement-2 announcement-font">Die Happy Birthday Show wird zwei Jahre alt!</h3>
     <p>Und wenn eine Geburtstags-Sendung Geburtstag hat, dann wird das gefeiert. Deshalb gibt es am 24. November eine
-      Jubiläumsausgabe, in der wir gemeinsam mit Tina Turner, Andreas Gabalier und Miley Cyrus feiern. Neben Musik von
+      Jubiläumsausgabe, in der wir gemeinsam mit Tina Turner, Tom Gregory und Miley Cyrus feiern. Neben Musik von
       diesen MusikerInnen hören wir auch die drei bekanntesten Hits aus dem letzten Jahr. Außerdem gibt es ein paar
       Hintergrundinformationen zur Happy Birthday Show. Beginnen werden wir die Jubiläumsausgabe mit der ersten
       Moderation der ersten Happy Birthday Show vom 1. Dezember 2019 und dem ersten Lied: Mat Kearney - Coming Home.</p>
