--- a/16022022/index.html
+++ b/16022022/index.html
@@ -34,7 +34,8 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/110999" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Shakira, Daddy Yankee, Rainhard Fendrich und Nina Simone. Am 6. Februar war der Nationalfeiertag von Neuseeland, er
+      wird auch als „Waitangi Day“ bezeichnet. Außerdem war am 14. Februar Tag des Riesenrads.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
