--- a/16032022/index.html
+++ b/16032022/index.html
@@ -34,7 +34,8 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/111000" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Lady Gaga, James Arthur, Camila Cabello und Bobby McFerrin. Am 14. März war der internationale Pi-Tag. Außerdem hatte
+      die US-amerikanische Skirennläuferin Mikaela Shiffrin am 13. März Geburtstag.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
